# gr-render

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.MD
.cache/clangd/index/: gCommon.cpp.5C0FF0C4F3E4EF0F.idx  gCommon.h.96C994F07EDD9873.idx  gError.cpp.2475EEA09B8859C3.idx  gError.h.44AA6F45BF34F709.idx  gFramebuffer.cpp.2F91DC817802C655.idx  gFramebuffer.h.42F5F6D554C964D9.idx  gRender.cpp.E367268163C681C1.idx  gRender.h.2263443074BD4AF4.idx  gRenderbuffer.cpp.3E1859227C32B26B.idx  gRenderbuffer.h.E866FF5FF571FF55.idx  gShader.cpp.F8D19940AB777F8B.idx  gShader.h.4E821CFF82D02F4E.idx  gTexture.cpp.B2AF62A8ED5E7961.idx  gTexture.h.2D38690EE63DC8D0.idx  gVertexArray.cpp.28878EAF2E865F87.idx  gVertexArray.h.08EAF3E1BECC2528.idx  gl.cpp.F4F52B9A92ACD30B.idx  gl.h.0675B35132C852EA.idx  shader.cpp.A622999A88977611.idx  shader.hpp.705FF0FE9BFE945D.idx
include/gr-render/: buffer_element.hpp  buffer_layout.hpp  gCommon.h  gError.h  gFramebuffer.h  gObject.h  gRender.h  gRenderbuffer.h  gShader.h  gTexture.h  gVertex3D.h  gVertexArray.h  gl.h  index_buffer.hpp  shader.hpp  vertex_array.hpp  vertex_buffer.hpp
include/gr-render/platform/opengl/: opengl_index_buffer.hpp  opengl_vertex_array.hpp  opengl_vertex_buffer.hpp
src/: gCommon.cpp  gError.cpp  gFramebuffer.cpp  gRender.cpp  gRenderbuffer.cpp  gShader.cpp  gTexture.cpp  gVertexArray.cpp  gl.cpp  index_buffer.cpp  shader.cpp  vertex_array.cpp  vertex_buffer.cpp
src/platform/opengl/: opengl_index_buffer.cpp  opengl_vertex_array.cpp  opengl_vertex_buffer.cpp
